bin_PROGRAMS = wsd flowcache
wsd_SOURCES = main.c wsd.h datalink.c process_ip.c process_ip.h process_udp.c process_udp.h process_tcp.c process_tcp.h process_http.c process_http.h process_telnet.c process_telnet.h process_smtp.c process_smtp.h hash.c hash.h mem.c mem.h util.c util.h wirespy.h ../include/sysdep.h ../include/common.h ../include/config.h
wsd_LDADD = 
flowcache_SOURCES = flowcache.c flowcache.h cache.c cache.h process_tcp.c process_tcp.h process_http.c process_http.h process_telnet.c process_telnet.h process_smtp.c process_smtp.h hash.c hash.h mem.c mem.h util.c util.h wirespy.h ../include/sysdep.h ../include/common.h ../include/config.h
flowcache_LDADD =
